gen/JavythonParser.py
# Generated from C:/Users/gutop/Downloads/Trab_Final +correções/Trab_Final/Javython.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JavythonParser ( Parser ):

    grammarFileName = "Javython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'decIds'", "'program'", "'main'", "'end'", 
                     "'return'", "'print'", "'input'", "'if'", "'else'", 
                     "'while'", "'for'", "'break'", "'void'", "'bool'", 
                     "'int'", "'real'", "'str'", "'true'", "'false'", "'+'", 
                     "'-'", "'*'", "'/'", "'++'", "'--'", "'='", "'=='", 
                     "'!='", "'>'", "'<'", "'!'", "'('", "')'", "'{'", "'}'", 
                     "':'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "PROGRAM", "MAIN", "END", 
                      "RETURN", "PRINT", "INPUT", "IF", "ELSE", "WHILE", 
                      "FOR", "BREAK", "VOID", "BOOL_TYPE", "INT_TYPE", "REAL_TYPE", 
                      "STR_TYPE", "TRUE", "FALSE", "ADD", "SUB", "MUL", 
                      "DIV", "INC", "DEC", "ASSIGN", "EQ", "NEQ", "GT", 
                      "LT", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "COLON", "SEMICOLON", "COMMA", "STRING", "REAL", "INT", 
                      "ID", "WS", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_bloco = 1
    RULE_blocoMetodo = 2
    RULE_blocoMain = 3
    RULE_metodo = 4
    RULE_parametros = 5
    RULE_parametro = 6
    RULE_decIds = 7
    RULE_declaracao = 8
    RULE_listaIds = 9
    RULE_tipo = 10
    RULE_valor = 11
    RULE_comando = 12
    RULE_ifElse = 13
    RULE_whileLoop = 14
    RULE_forLoop = 15
    RULE_io = 16
    RULE_atribuicao = 17
    RULE_chamadaMetodo = 18
    RULE_argumentos = 19
    RULE_expressao = 20

    ruleNames =  [ "program", "bloco", "blocoMetodo", "blocoMain", "metodo", 
                   "parametros", "parametro", "decIds", "declaracao", "listaIds", 
                   "tipo", "valor", "comando", "ifElse", "whileLoop", "forLoop", 
                   "io", "atribuicao", "chamadaMetodo", "argumentos", "expressao" ]

    EOF = Token.EOF
    T__0=1
    PROGRAM=2
    MAIN=3
    END=4
    RETURN=5
    PRINT=6
    INPUT=7
    IF=8
    ELSE=9
    WHILE=10
    FOR=11
    BREAK=12
    VOID=13
    BOOL_TYPE=14
    INT_TYPE=15
    REAL_TYPE=16
    STR_TYPE=17
    TRUE=18
    FALSE=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    INC=24
    DEC=25
    ASSIGN=26
    EQ=27
    NEQ=28
    GT=29
    LT=30
    NOT=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    COLON=36
    SEMICOLON=37
    COMMA=38
    STRING=39
    REAL=40
    INT=41
    ID=42
    WS=43
    LINE_COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(JavythonParser.PROGRAM, 0)

        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)

        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(JavythonParser.SEMICOLON, 0)

        def blocoMain(self):
            return self.getTypedRuleContext(JavythonParser.BlocoMainContext,0)


        def END(self):
            return self.getToken(JavythonParser.END, 0)

        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def metodo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.MetodoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.MetodoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JavythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(JavythonParser.PROGRAM)
            self.state = 43
            self.match(JavythonParser.COLON)
            self.state = 44
            self.match(JavythonParser.ID)
            self.state = 45
            self.match(JavythonParser.SEMICOLON)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 46
                self.decIds()


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 253952) != 0):
                self.state = 49
                self.metodo()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.blocoMain()
            self.state = 56
            self.match(JavythonParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

<<<<<<< HEAD
        def LBRACE(self):
            return self.getToken(JavythonParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JavythonParser.RBRACE, 0)
=======
        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)
>>>>>>> guto-ajustes-front

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ComandoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ComandoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

<<<<<<< HEAD
        localctx = JavythonParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloco)
=======
        localctx = JavythonParser.DecIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decIds)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(JavythonParser.T__0)
            self.state = 55
            self.match(JavythonParser.COLON)
            self.state = 59 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 56
                    self.declaracao()
                    self.state = 57
                    self.match(JavythonParser.SEMICOLON)

                else:
                    raise NoViableAltException(self)
                self.state = 61 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaIds(self):
            return self.getTypedRuleContext(JavythonParser.ListaIdsContext,0)


        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def ASSIGN(self):
            return self.getToken(JavythonParser.ASSIGN, 0)

        def valor(self):
            return self.getTypedRuleContext(JavythonParser.ValorContext,0)


        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def getRuleIndex(self):
            return JavythonParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = JavythonParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
>>>>>>> guto-ajustes-front
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(JavythonParser.LBRACE)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 132012265184720) != 0):
                self.state = 59
                self.comando()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(JavythonParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoMetodoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JavythonParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JavythonParser.RBRACE, 0)

        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ComandoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ComandoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_blocoMetodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoMetodo" ):
                listener.enterBlocoMetodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoMetodo" ):
                listener.exitBlocoMetodo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoMetodo" ):
                return visitor.visitBlocoMetodo(self)
            else:
                return visitor.visitChildren(self)




    def blocoMetodo(self):

        localctx = JavythonParser.BlocoMetodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blocoMetodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(JavythonParser.LBRACE)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            if _la==5:
                self.state = 68
                self.decIds()


            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 132012265184720) != 0):
                self.state = 71
                self.comando()
=======
            while _la==38:
>>>>>>> guto-ajustes-front
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(JavythonParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoMainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(JavythonParser.MAIN, 0)

        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)

        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ComandoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ComandoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_blocoMain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoMain" ):
                listener.enterBlocoMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoMain" ):
                listener.exitBlocoMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoMain" ):
                return visitor.visitBlocoMain(self)
            else:
                return visitor.visitChildren(self)




    def blocoMain(self):

        localctx = JavythonParser.BlocoMainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blocoMain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(JavythonParser.MAIN)
            self.state = 80
            self.match(JavythonParser.COLON)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 81
                self.decIds()


            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 132012265184720) != 0):
                self.state = 84
                self.comando()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

=======
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3848291483648) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
>>>>>>> guto-ajustes-front
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetodoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def LPAREN(self):
            return self.getToken(JavythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JavythonParser.RPAREN, 0)

        def blocoMetodo(self):
            return self.getTypedRuleContext(JavythonParser.BlocoMetodoContext,0)


        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def VOID(self):
            return self.getToken(JavythonParser.VOID, 0)

        def parametros(self):
            return self.getTypedRuleContext(JavythonParser.ParametrosContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_metodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetodo" ):
                listener.enterMetodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetodo" ):
                listener.exitMetodo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetodo" ):
                return visitor.visitMetodo(self)
            else:
                return visitor.visitChildren(self)




    def metodo(self):

        localctx = JavythonParser.MetodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_metodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 16, 17]:
                self.state = 90
                self.tipo()
                pass
            elif token in [13]:
                self.state = 91
                self.match(JavythonParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self.match(JavythonParser.ID)
            self.state = 95
            self.match(JavythonParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0):
                self.state = 96
                self.parametros()


            self.state = 99
            self.match(JavythonParser.RPAREN)
            self.state = 100
            self.blocoMetodo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ParametroContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ParametroContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JavythonParser.COMMA)
            else:
                return self.getToken(JavythonParser.COMMA, i)

        def getRuleIndex(self):
            return JavythonParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = JavythonParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.parametro()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            while _la==42:
                self.state = 103
=======
            while _la==38:
                self.state = 100
>>>>>>> guto-ajustes-front
                self.match(JavythonParser.COMMA)
                self.state = 104
                self.parametro()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def getRuleIndex(self):
            return JavythonParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = JavythonParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.tipo()
            self.state = 111
            self.match(JavythonParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIDS(self):
            return self.getToken(JavythonParser.DECIDS, 0)

        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.DeclaracaoContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(JavythonParser.SEMICOLON)
            else:
                return self.getToken(JavythonParser.SEMICOLON, i)

        def getRuleIndex(self):
            return JavythonParser.RULE_decIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecIds" ):
                listener.enterDecIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecIds" ):
                listener.exitDecIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecIds" ):
                return visitor.visitDecIds(self)
            else:
                return visitor.visitChildren(self)




    def decIds(self):

        localctx = JavythonParser.DecIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decIds)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(JavythonParser.DECIDS)
            self.state = 114
            self.match(JavythonParser.COLON)
            self.state = 118 
            self._errHandler.sync(self)
<<<<<<< HEAD
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 115
                    self.declaracao()
                    self.state = 116
                    self.match(JavythonParser.SEMICOLON)

                else:
                    raise NoViableAltException(self)
                self.state = 120 
=======
            _la = self._input.LA(1)
            if _la==1:
                self.state = 111
                self.decIds()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8252782550496) != 0):
                self.state = 114
                self.comando()
                self.state = 119
>>>>>>> guto-ajustes-front
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaIds(self):
            return self.getTypedRuleContext(JavythonParser.ListaIdsContext,0)


        def COLON(self):
            return self.getToken(JavythonParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def ASSIGN(self):
            return self.getToken(JavythonParser.ASSIGN, 0)

        def valor(self):
            return self.getTypedRuleContext(JavythonParser.ValorContext,0)


        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def getRuleIndex(self):
            return JavythonParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = JavythonParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.listaIds()
                self.state = 123
                self.match(JavythonParser.COLON)
                self.state = 124
                self.tipo()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 125
                    self.match(JavythonParser.ASSIGN)
                    self.state = 126
                    self.valor()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(JavythonParser.ID)
                self.state = 130
                self.match(JavythonParser.ASSIGN)
                self.state = 131
                self.valor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JavythonParser.ID)
            else:
                return self.getToken(JavythonParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JavythonParser.COMMA)
            else:
                return self.getToken(JavythonParser.COMMA, i)

        def getRuleIndex(self):
            return JavythonParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = JavythonParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listaIds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(JavythonParser.ID)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
<<<<<<< HEAD
            while _la==42:
                self.state = 135
                self.match(JavythonParser.COMMA)
                self.state = 136
                self.match(JavythonParser.ID)
                self.state = 141
=======
            if _la==1:
                self.state = 124
                self.decIds()


            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8252782550496) != 0):
                self.state = 127
                self.comando()
                self.state = 132
>>>>>>> guto-ajustes-front
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(JavythonParser.INT_TYPE, 0)

        def REAL_TYPE(self):
            return self.getToken(JavythonParser.REAL_TYPE, 0)

        def STR_TYPE(self):
            return self.getToken(JavythonParser.STR_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(JavythonParser.BOOL_TYPE, 0)

        def getRuleIndex(self):
            return JavythonParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)
